# lilygo-thmi-lvgl-9-esp-idf-project

./: .gitignore  README.md  code.code-workspace  partition.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ccomp_timer/: idf_component.yml
components/pax-gfx/: idf_component.yml
components/pax-gfx/core/src/ptq/src/: ptq.c
components/pl_common/: .component_hash  CHECKSUMS.json  idf_component.yml
components/pl_nvs/: .component_hash  CHECKSUMS.json  idf_component.yml
components/pl_uart/: idf_component.yml
components/pl_usb/: CHANGELOG.md  idf_component.yml  pl_usb_device.cpp
components/pl_usb/examples/usb_device_cdc/: sdkconfig.defaults
components/pl_usb/examples/usb_device_cdc_echo_server/main/: idf_component.yml
components/terminal-emulator/: console.c
demo/lvgl9_esp_lvgl_port_implementation/main/: app_main.cpp
demo/lvgl9_my-implementation/main/: app_main.cpp
demo/main-console/main/: CMakeLists.txt  app_main.cpp
help/: Git_HELP.md
lib/esp32s3-cli-v002/include/: config.h
lib/one-cli-v0003/: .clang-format  version
lib/one-cli-v0003/modules/info_cmd/: stack.c
lib/one-cli-v0003/modules/tasks_cmd/: tasks_cmd.c
lib/onebutton-v001/: version
main/: CMakeLists.txt  app_main.cpp  lv_conf.h
